--- a/Mtn.ApiTemplate.Services/Mtn.ApiTemplate.Services.csproj
+++ b/Mtn.ApiTemplate.Services/Mtn.ApiTemplate.Services.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Mtn.ApiTemplate.Api.Contracts\Mtn.ApiTemplate.Api.Contracts.csproj" />
+    <ProjectReference Include="..\Mtn.ApiTemplate.Domain\Mtn.ApiTemplate.Domain.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
