Adding Global Exception Handling

--- a/Mtn.ApiTemplate.Api.Contracts/Mtn.ApiTemplate.Api.Contracts.csproj
+++ b/Mtn.ApiTemplate.Api.Contracts/Mtn.ApiTemplate.Api.Contracts.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Mtn.ApiTemplate.Domain\mtn.ApiTemplate.Domain.csproj" />
+    <ProjectReference Include="..\Mtn.ApiTemplate.Models\Mtn.ApiTemplate.Models.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
